@@ -11,7 +11,7 @@ PKG_IS_ADDON="yes"
 PKG_ADDON_NAME="Deluge"
 PKG_ADDON_TYPE="xbmc.service"
 PKG_MAINTAINER="thoradia"
-PKG_REV="14"
+PKG_REV="15"
 PKG_SHORTDESC="$PKG_ADDON_NAME: lightweight, free software, cross-platform BitTorrent client"
 PKG_LONGDESC="$PKG_ADDON_NAME ($PKG_VERSION) is a lightweight, free software, cross-platform BitTorrent client"
 PKG_DISCLAIMER="Keep it legal and carry on"
